(library
 (public_name mazeppa)
 (libraries str pprint checked_oint)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_string_interpolation
   ppx_yojson_conv))
 (instrumentation
  (backend bisect_ppx))
 (foreign_stubs
  (language c)
  (names magic)))

(include_subdirs unqualified)

(menhir
 (modules parser))

(ocamllex lexer)

(env
 (release
  (ocamlopt_flags
   (:standard -O3))))
