(library
 (public_name mazeppa)
 (libraries str pprint checked_oint)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_string_interpolation
   ppx_yojson_conv
   ppx_blob))
 (instrumentation
  (backend bisect_ppx))
 (foreign_stubs
  (language c)
  (names magic))
 (preprocessor_deps
  (file ../c/mazeppa.h)))

(include_subdirs unqualified)

(menhir
 (modules parser))

(ocamllex lexer)

(env
 (release
  (ocamlopt_flags
   (:standard -O3))))
